--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,27 @@
 server:
   port: 8081
+
+  spring:
+
+    #h2
+    #  datasource:
+    #    url: jdbc:h2:mem:testdb
+    #
+    #  h2:
+    #    console:
+    #      #enabled: false
+    #      enabled: true
+
+    #postgres
+    datasource:
+      url: jdbc:postgresql://localhost:5432/postgres
+      username: postgres
+      password: postgres
+      driverClassName: org.postgresql.Driver
+      initialization-mode: always
+
+    jpa:
+      generate-ddl: true
+      hibernate:
+        ddl-auto: update
+      show-sql: true
